[tool.poetry]
name = "blog"
version = "0.1.0"
description = "A repository for technical blogging."
authors = ["ImtiazKhanDS"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nbdev = "^2.3.13"
setuptools = "^69.5.1"
jupyterlab = "^4.1.6"
jupyterlab-quarto = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
